# monetdb-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTES.md  NOTES.org  README.md  TODO.org  checklicense.py  release.toml
.github/workflows/: integrationtests.yml  rustversions.yml  unittests.yml
examples/: testconnect.rs
notes/: 202409-getting-started.md  202409-naming.md  202410-how-to-release.md  202410-license.md  202410-status.md  202410-types.md  README.md
src/: conn.rs  lib.rs  monettypes.rs  our_logger.rs  toplevel.md
src/convert/: mod.rs  raw_decimal.rs  raw_temporal.rs  temporal_time.rs  tests.rs
src/cursor/: delayed.rs  mod.rs  replies.rs  rowset.rs
src/framing/: blockstate.rs  connecting.rs  mod.rs  reading.rs  writing.rs
src/framing/tls/: mod.rs  rustls.rs
src/parms/: mod.rs  parameters.rs  tests.md  urlparser.rs  urltests.rs
src/util/: hash_algorithms.rs  ioerror.rs  mod.rs  referencedata.rs
tests/ci/: context.rs  mod.rs  schema.sql  test_connecting.rs  test_resulttypes.rs
