[package]
name = "monetdb"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
array-macro = "2.1.8"
bstr = "1.10.0"
digest = "0.10.7"
enum-utils = "0.1.2"
hex = "0.4.3"
jiff = { version="0.1.13", features = ["std"] }  # we don't need the timezone database
log = "0.4.22"
memchr = "2.7.4"
ripemd = "0.1.3"
sha2 = "0.10.8"
thiserror = "1.0.63"
url = "2.5.2"

[dev-dependencies]
anyhow = "1.0.88"
bstr = "1.10.0"
itertools = "0.13.0"
simplelog = "0.12.2"
