[package]
name = "monetdb"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
doctest = false

[features]
default = []   # doesn't yet include "rustls"
rustls = [ "dep:rustls", "dep:rustls-platform-verifier" ]

[dependencies]
array-macro = "2.1.8"
bstr = "1.10.0"
claims = "0.7.1"
digest = "0.10.7"
enum-utils = "0.1.2"
gethostname = "0.5.0"
hex = "0.4.3"
log = "0.4.22"
memchr = "2.7.4"
ripemd = "0.1.3"
rustls = { version="0.23.13", optional = true }
rustls-platform-verifier = { version="0.3.4", optional = true }
sha2 = "0.10.8"
thiserror = "1.0.63"
time = { version="0.3.36", features = [ "alloc", "std", "local-offset" ] }
url = "2.5.2"

[dev-dependencies]
anyhow = "1.0.88"
bstr = "1.10.0"
itertools = "0.13.0"
simplelog = "0.12.2"
